// auth-user

syntax = "proto3";

package auth;

service AuthUser {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message CreateUserRequest {
    int32 id = 1;
    string username = 2;
    string email = 3;
}

message CreateUserResponse {
    int32 code = 2;
}